<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">StoryApps</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="list_story">List Story</string>
    <string name="description">Description</string>
    <string name="register_account">Register Account</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="add_your_username_here">Add your username here</string>
    <string name="add_new_story">Add New Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="logout">Logout</string>
    <string name="detail_story_image">Detail Story Image</string>
    <string name="description_default">Story Description :</string>
    <string name="login_image">Login Image</string>
    <string name="register_image">Register Image</string>
    <string name="add_your_email_here">Add your email here</string>
    <string name="add_your_password_here">Add your password here</string>
    <string name="welcome_title">Welcome to StoryApps !!!</string>
    <string name="welcome_support">Please Login to Continue and Register to Create Account!</string>
    <string name="localize">Localize</string>
    <string name="password_warning">Passwords must have at least 8 characters</string>
    <string name="map">Map</string>
    <string name="title_activity_maps">World Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="register_image_link" tools:ignore="TypographyDashes">https://bit.ly/4acjI2F</string>
    <string name="login_image_link" tools:ignore="TypographyDashes">https://bit.ly/3WB7sWt</string>
    <string name="retry">Retry</string>
    <string name="timeout">Timeout</string>
    <string name="include_current_location">Include Current Location</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
</resources>